kubernetes.yml

# deployment-web1.yml
# nginx:latest, 2 replica, port 80
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web1-deployment
  labels:
    app: web1

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: nginx:latest
        ports:
        - containerPort: 80

---
# deployment-web2.ym
# nginx:latest, 2 replica, port 80
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web2-deployment
  labels:
    app: web2

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: nginx:latest
        ports:
        - containerPort: 80

---
# deployment-database.yml
# mariadb:latest, 1 replica, port 3306, variable env MYSQL_ROOT_PASSWORD, MYSQL_DATABASE, MYSQL_USER, MYSQL_PASSWORD, permanent volume
apiVersion: apps/v1
kind: Deployment

metadata:
  name: database-deployment
  labels:
    app: database

spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: database-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: database-volume
        persistentVolumeClaim:
          claimName: database-pvc

---
# service-web1.yml
# port 80
apiVersion: v1
kind: Service

metadata:
  name: web1-service

spec:
  selector:
    app: web1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# service-web2.yml
# port 80
apiVersion: v1
kind: Service

metadata:
  name: web2-service

spec:
  selector:
    app: web2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# service-database.yml
# port 3306
apiVersion: v1
kind: Service

metadata:
  name: database-service

spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
# ingress.yml
# 2 rules, 2 hostnames, 2 paths, with SSL
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: web1.tp-rendu.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web1-service
            port:
              number: 80
  - host: web2.tp-rendu.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web2-service
            port:
              number: 80
  tls:
  - hosts:
    - web1.tp-rendu.test
    secretName: tls-secret-web1
  - hosts:
    - web2.tp-rendu.test
    secretName: tls-secret-web2
